--- a/donate/index.html
+++ b/donate/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="checkbox">
 						<label>
-							<input type="checkbox"> I caccept the Terms of Use & Privacy Policy.
+							<input type="checkbox"> I accept the Terms of Use & Privacy Policy.
 							<span class="checkmark"></span>
 						</label>
 					</div>
